--- a/app/templates/forgot-password.html
+++ b/app/templates/forgot-password.html
@@ -1,13 +1,39 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style-login.css') }}" rel="stylesheet">
-
 {% extends 'base.html' %}
 
-{% block title %}{{ super() }} - Login{% endblock %}
+{% block title %}{{ super() }} - Index{% endblock %}
 
 {% block content %}
+<style>
+    @font-face {
+        font-family: 'gta';
+        src: url('../app/static/fonts/pricedown.otf') format('opentype'), url('../app/static/fonts/pricedown.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+    }
+    body {
+        height: 500px;
+    }
 
-<main>
-    <h1>Se fodeu otário!</h1>
-</main>
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    h2 {
+        font-size: 3rem;
+        font-family: 'gta', arial;
+        text-transform: uppercase;
+        color: #eee;
+    }
+
+</style>
+
+<div class="main">
+    <h2>se fodeu</h2>
+</div>
+    
+</div>
 
 {% endblock %}
