--- a/app/templates/terms.html
+++ b/app/templates/terms.html
@@ -5,9 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of use</title>
+    <style>
+        body {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            background: grey;
+            display: flex;
+            justify-content: center;
+            color: #fff;
+        }
+
+        .main {
+            width: 70%;
+        }
+
+        h1 {
+            font-size: 3rem;
+            text-align: center;
+        }
+        
+        p {
+            color: #eee;
+            font-size: 2rem;
+        }
+    </style>
 </head>
 <body>
-    <h1>Terms of use</h1>
-    <p>Eu concordo que o desenvolvedor e dono desse site tem o direito de fazer o que quiser com os meus dados, inclusive vende-los para o Mark Zukerberg a preço de banana, e for necessário assino embaixo. Quero também doar todo o meu dinheiro para o desenvolvedor para que ele continue desevolvendo sites tão bons quanto esses .</p>
+    <div class="main">
+        <h1>Terms of use</h1>
+        <p>Eu concordo que o desenvolvedor e dono desse site tem o direito de fazer o que quiser com os meus dados, inclusive vende-los para o Mark Zukerberg a preço de banana, e for necessário assino embaixo. Quero também doar todo o meu dinheiro para o desenvolvedor para que ele continue desevolvendo sites tão bons quanto esses .</p>
+    </div>
 </body>
 </html>
