--- a/app/static/css/style-register.css
+++ b/app/static/css/style-register.css
@@ -6,24 +6,29 @@
     --color3: #2B6CF5;
     --color4: #1D8DDE;
     --color5: #21D8FA;
+    --color6: #292a2d;
+    --color7: #1d1e1f;
+    --color8: #eee;
 }
 
 * {
+    box-sizing: border-box;
     margin: 0px;
     padding: 0px;
 }
 
 body {
-    background-color: #292a2d;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--color6);
+    font-family: 'Roboto', sans-serif;
     width: 100%;
     height: auto;
 }
 
-main {
+#main {
+    align-content: center;
     padding: 20px;
     margin:auto;
-    margin-top: 100px;
+    margin-top: 30px;
     text-align: center;
     max-width: 600px;
     height: auto;
@@ -33,100 +38,143 @@ main {
     border-radius: 10px;
 }
 
-#titulo {
-    color: white;
-    width: 100%;
-    font-size: 2.5em;
-    padding: 10px;
+.main-container {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#name, #lastname {
-    width: 35.5%;
-    height: 30px;
-}
-
-#email, #password, #confirm-password, #username{
-    height: 30px;
-    width: 75%;
-    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.493);
-}
-
-.camponame {
-    display: block;
-
-    text-align: center;
-    font-size: 1.2em;
-    border-radius: 8px;
-    border: none;
-    width: 100%;
-}
-
-.campo input, button {
-    padding: 0.2em;
-    margin: 0.3em;
-    text-align: center;
-    font-size: 1.2em;
-    border-radius: 8px;
-}
-
-.terms {
-    color: white;
-}
-
-.campo #terms {
-    color: var(--color5);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-    text-decoration: underline;
-    transition-duration: 0.2s;
-    
-}
-
-.campo #terms:hover {
-    color: white;
-}
-
-button {
-    background-image: linear-gradient(to bottom, var(--color5), var(--color3));
-    color: white;
-    height: 30px;
-    width: 75%;
-    font-size: 1.2em;
-    border: 0;
-    margin-bottom: 1em;
-    border: white;
-    padding: 0.2em 0.6em;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.507);
-    transition-duration: 0.5s;
-}
-
-button:hover {
-    color: black;
+#register {
     width: 70%;
 }
 
-button:focus {
+#register h2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    width: 100%;
+    font-size: 2.5rem;
+    padding: 10px;
+}
+
+#register h3 {
+    text-align: left;
+    font-size: 0.8rem;
+    color: #eee;
+    padding: 0 10px;
+}
+
+#register .campo {
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    justify-content: flex-start;
+}
+
+#register .camponame {
+    display: flex;
+    justify-content: space-between;
+    border: none;
+}
+
+#name, #lastname, #email, #username, #password, #confirm-password{
+    height: 30px;
+    width: 100%;
+    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.493);
+    padding: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 1.2em;
+    border-radius: 8px;
+}
+
+#register .terms {
+    color: white;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    letter-spacing: 1px;
+    margin-top: 10px;
+}
+
+#register .terms a {
+    color: #eee;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    transition: all 300ms ease;
+    
+}
+
+#register .terms a:hover {
+    color: var(--color5);
+    text-decoration: none;
+}
+
+.button {
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to bottom, var(--color5), var(--color3));
+    color: #eee;
+    height: 30px;
+    width: 100%;
+    font-size: 1.2em;
+    border: 1px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.507);
+    padding: 10px;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.button:hover {
+    background-image: linear-gradient(to bottom, var(--color5), var(--color2));
+    cursor: pointer;
+}
+
+.button:focus {
     box-shadow: inset 2px 2px 2px rgb(0, 0, 0);
 }
 
 #haveaccount {
-    color: var(--color5);
+    font-size: 0.8rem;
+    padding-top: 10px;
+    color: #eee;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+}
+
+#haveaccount a {
+    color: #eee;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    transition: all 300ms ease;
+}
+
+#haveaccount a:hover {
+    color: var(--color5);
     text-decoration: none;
-    transition-duration: 0.2s;
 }
 
-#haveaccount:hover {
+#flash {
+    position: fixed;
+    bottom: 20px;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
     color: white;
-    text-decoration: underline;
-}
-
-.flash {
-    color: white;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
     width: 100%;
-    text-align: center;
 }
 
-.flash ul {
+#flash ul {
+    width: auto;
+    background-image: linear-gradient(to bottom, chartreuse, rgb(61, 121, 2));
+    text-align: center;
+    padding: 10px 15px;
+    border-radius: 8px;
     list-style: none;
+    margin-bottom: 10px;
+    text-transform: uppercase;
 }
