--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
           <ul>
             <li><a href="/home">Home</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/login">Login</a></li>
+            <li><a href="/profile">Profile</a></li>
           </ul>
         </nav>
       </div>
