--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Meu Site{% endblock %}</title>
+    <title>{% block title %}MitMirroR{% endblock %}</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-base.css') }}" rel="stylesheet">
   </head>
@@ -12,7 +13,7 @@
     <header id="header-main">
       <div id="header-container">
         <h1 class="title-main">
-          <a href="/home">Meu Site</a>
+          <a href="/home">MitMirroR</a>
         </h1>
         <nav class="navbar-main">
           <ul>
