--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,7 +9,7 @@
 <main id="main">
     <div class="main-container">
         <div id="title">
-            <h2>Bem vindo ao Meu Site!</h2>
+            <h2>Bem vindo ao MitMirroR!</h2>
         </div>
         <div id="buttons">
             <form action="/login">
