--- a/app/static/css/style-profile.css
+++ b/app/static/css/style-profile.css
@@ -130,39 +130,125 @@ body {
     border-radius: px;
 }
 
-#column2-container #conteudo .items {
+.task-items{
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: auto;
-    background: cornflowerblue;
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+.task-items ul {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.task-items ul .item{
+    display: flex;
+    width: 100%;
+    height: 40px;
+    padding: 0;
+    border: 1px solid #fff;
+    font-size: 1.5em;
+    color: #ffffff;
+}
+
+.task-items ul .item li{
+    border-radius: 5px;
+    width: 80%;
+    height: 100%;
+    list-style: none;
+    padding: 5px 0;
+}
+
+.task-items ul .item .del-button{
+    border-radius: 5px;
+    width: 20%;
+    height: 100%;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to bottom, rgb(255, 57, 57), rgb(190, 2, 2));
+    color: #eee;
+    height: 100%;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.507);
+    text-transform: uppercase;
+}
+
+.task-items ul .item .del-button:hover {
+    background-image: linear-gradient(to bottom, rgb(190, 2, 2), rgb(255, 57, 57));
+    cursor: pointer;
+}
+
+.task-items ul .item .del-button:focus {
+    box-shadow: inset 2px 2px 2px rgb(0, 0, 0);
+}
+
+#column2-container #conteudo .disc {
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-content: space-between;
 }
 
-.item, button{
-    padding: 10px 0;
-    border: 1px solid #fff;
-    border-radius: 5px;
-
-    font-size: 1.5em;
-    color: #ffffff;
+.button {
+    margin-bottom: 15px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to bottom, rgb(5, 221, 16), rgb(0, 88, 4));
+    color: #eee;
+    height: 100%;
+    width: 100%;
+    font-size: 1.2em;
+    border: 1px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.507);
     text-transform: uppercase;
 }
 
-.task {
-    background: cornflowerblue;
-    width: 100%;
-    list-style: none;
+.button:hover {
+    background-image: linear-gradient(to bottom,  rgb(0, 88, 4), rgb(5, 221, 16));
+    cursor: pointer;
 }
 
-.task:hover{
-    background: darkgreen;
+.button:focus {
+    box-shadow: inset 2px 2px 2px rgb(0, 0, 0);
 }
 
-.button {
-    background: cornflowerblue;
+.Disconect {
+    margin-top: 10px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: stretch;
+    align-items: center;
+    background-image: linear-gradient(to bottom, rgb(5, 221, 16), rgb(0, 88, 4));
+    color: #eee;
+    height: 30px;
     width: 100%;
+    border: 1px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.507);
+    text-transform: uppercase;
 }
+
+.Disconect:hover {
+    background-image: linear-gradient(to bottom,  rgb(0, 88, 4), rgb(5, 221, 16));
+    cursor: pointer;
+}
+
+.Disconect:focus {
+    box-shadow: inset 2px 2px 2px rgb(0, 0, 0);
+}
+
 
 #column3-container {
     width: 20%;
