--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -46,9 +46,9 @@
                     </label>
                 </div>
                 <div class="campo">
-                    <h3>Confirm-Password</h3>
+                    <h3>Confirm Password</h3>
                     <label for="confirm-password">
-                        {{ form.confirm(id="confirm-password", placeholder="Confirm-Password") }}
+                        {{ form.confirm(id="confirm-password", placeholder="Confirm Password") }}
                     </label>
                 </div>
                 <div class="campo">
