--- a/app/static/css/style-base.css
+++ b/app/static/css/style-base.css
@@ -8,7 +8,7 @@
     --color4: #1D8DDE;
     --color5: #21D8FA;
     --color6: #292a2d;
-    --color7: #1d1e1f;
+    --color7: #101011;
     --color8: #eee;
 }
 
@@ -19,7 +19,7 @@
 }
 
 body {
-    background-color: var(--color6);
+    background-image: linear-gradient(to left, var(--color6), #000);
     font-family: 'Roboto', sans-serif;
     width: 100%;
     height: auto;
@@ -31,7 +31,7 @@ body {
     justify-content: space-between;
     position: sticky;
     top:0;
-    background-color: var(--color7);
+    background-color: #171718;
     width: 100%;
 }
 
@@ -57,14 +57,12 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    padding: 10px;
+    padding: 13px 5px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
-    
 }
 
 #header-container .navbar-main ul li {
     display: inline;
-    
 }
 
 #header-container .navbar-main > ul li a{
@@ -89,7 +87,30 @@ body {
     text-align: center;
     position: fixed;
     bottom: 0px;
-    background-color: rgba(51, 51, 51, 0.575);
     color: var(--color8);
     width: 100%;
+}
+
+#flash {
+    position: fixed;
+    bottom: 20px;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    color: white;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 2);
+    width: 100%;
+}
+
+#flash ul {
+    width: auto;
+    background-image: linear-gradient(to bottom, chartreuse, rgb(61, 121, 2));
+    text-align: center;
+    padding: 10px 15px;
+    border-radius: 8px;
+    list-style: none;
+    margin-bottom: 10px;
+    text-transform: uppercase;
 }
