atualizado o layout de login e register

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -51,11 +51,11 @@
                 </div>
                 <div class="link check">
                     <div class="checkbox">
-                        {{ form.remember_me(id="checkbox") }}<strong> Keep me signed in</strong>
+                        {{ form.remember_me }}<strong> Keep me signed in</strong>
                     </div>
                     <a  href="/forgot-password">Forgot Password?</a>
                 </div>
-                <button type="submit" class="btn" value="Login">Login</button>
+                <button type="submit" class="btn" value="Login">Sign in</button>
                 <div class="link register">
                     <a href="/register">Create an account!</a>
                 </div>
